--- a/yanputhesis.dtx
+++ b/yanputhesis.dtx
@@ -814,6 +814,7 @@ int main()
     pdfstartview={FitH},                                    % 适合窗口宽度
     pdfnewwindow=true,                                      % 以新窗口打开链接
 }                                                           %
+\RequirePackage{bookmark}                                   %
 %%-----------------------------------------------------------------------------%
 \RequirePackage{type1cm}                                    % 设置字号与行距
 \newcommand{\sChuhao}{\fontsize{42pt}{63pt}\selectfont}     % 初号，1.5 倍
@@ -1665,10 +1666,14 @@ int main()
 %%=============================================================================%
 %% 目录页
 %%-----------------------------------------------------------------------------%
+%    \end{macrocode}
+% \markdtxchanges{v1.8.5}{2023/03/07}{目录不需要出现在目录当中}
+%    \begin{macrocode}
 \let\old@toc\tableofcontents                                % 目录
 \renewcommand{\tableofcontents}{                            %
     \sDefault\phantomsection                                %
-    \addcontentsline{toc}{chapter}{\contentsname}           %
+    % \addcontentsline{toc}{chapter}{\contentsname}           %
+    \bookmark[dest=\HyperLocalCurrentHref, level=0]{\contentsname}
     \old@toc \cleardoublepage                               %
 }                                                           %
 \let\old@lof\listoffigures                                  % 图目录
