--- a/yanputhesis.cls
+++ b/yanputhesis.cls
@@ -255,10 +255,10 @@
 \RequirePackage{setspace}                                   % 空白长度控制
 \RequirePackage{ragged2e}                                   % 对齐
 \DeclareCaptionFont{cWuhao}{\sWuhao}                        % 图表标题为五号
-\captionsetup[table]{labelfont=cWuhao,textfont=cWuhao, aboveskip=10pt, belowskip=0pt}      %
-\captionsetup[figure]{labelfont=cWuhao,textfont=cWuhao, aboveskip=10pt, belowskip=0pt}     %
-\captionsetup[subtable]{labelformat=simple, aboveskip=10pt, belowskip=-5pt}  %
-\captionsetup[subfigure]{labelformat=simple, aboveskip=10pt, belowskip=-5pt}%
+\captionsetup[table]{labelfont=cWuhao, textfont=cWuhao, aboveskip=10pt, belowskip=0pt}
+\captionsetup[figure]{labelfont=cWuhao, textfont=cWuhao, aboveskip=10pt, belowskip=0pt}
+\captionsetup[subtable]{labelformat=simple, aboveskip=10pt, belowskip=-5pt}
+\captionsetup[subfigure]{labelformat=simple, aboveskip=10pt, belowskip=-5pt}
 \AtBeginEnvironment{tabular}{\sWuhao}                       % 表格内容为五号
 \AtBeginEnvironment{tabularx}{\sWuhao}                      %
 \newcolumntype{C}{>{\centering\arraybackslash}X}            % 等宽居中
@@ -842,8 +842,8 @@
 %% 附页部分
 %%-----------------------------------------------------------------------------%
 \newenvironment{acknowledgements}{                          % 致谢
-    \renewcommand{\baselinestretch}{1.5}                    %
-    \fontsize{12pt}{13pt}\selectfont                        %
+    \renewcommand{\baselinestretch}{1.0}                    %
+    \sDefault                                               %
     \phantomsection\chapter*{\nwpu@page@ack}                %
     \markboth{\nwpu@page@ack}{\nwpu@page@ack}               %
     \addcontentsline{toc}{chapter}{\nwpu@page@ack}          %
@@ -851,8 +851,8 @@
 }{\par \cleardoublepage}                                    %
 %%-----------------------------------------------------------------------------%
 \newenvironment{accomplishments}{                           % 参加科研情况
-    \renewcommand{\baselinestretch}{1.5}                    %
-    \fontsize{12pt}{13pt}\selectfont                        %
+    \renewcommand{\baselinestretch}{1.0}                    %
+    \sDefault                                               %
     \phantomsection\chapter*{\nwpu@page@acp}                %
     \markboth{\nwpu@page@acp}{}                             %
     \addcontentsline{toc}{chapter}{\nwpu@page@acp}          %
