--- a/yanputhesis-sample.tex
+++ b/yanputhesis-sample.tex
@@ -33,6 +33,16 @@
 \usepackage{metalogo}                                       % 软件标志
 \usepackage[binary-units=true]{siunitx}                     % 物理量单位
 \usepackage{amsmath}                                        % 基础数学库
+\usepackage[acronym]{glossaries}							% 缩略表库
+%%=============================================================================%
+%% 缩略语（也可以是独立文件）
+%%-----------------------------------------------------------------------------%
+\newacronym{npu}{西工大}{西北工业大学}
+\newglossaryentry{massEnergyFunc}{
+	name = 质能方程,
+	description = 一种阐述能量与质量间相互关系的理论物理学公式
+}
+\makeglossaries
 %%=============================================================================%
 %% 参考文献（也可以是独立文件）
 %%-----------------------------------------------------------------------------%
@@ -172,6 +182,9 @@
 \end{engabstract}                                           % 英文摘要结束
 %%-----------------------------------------------------------------------------%
 \tableofcontents                                            % 目录
+\phantomsection\addcontentsline{toc}{chapter}{缩写表}		  % 缩写表（学校未做要求）
+\printglossary[type=\acronymtype,title=缩写表]				  % 缩写表（学校未做要求）
+\printglossary[title=术语表]								  % 术语表（学校未做要求）
 \listoffigures                                              % 图目录（学校未做要求）
 \listoftables                                               % 表目录（学校未做要求）
 \printnomenclature                                          % 符号表（学校未做要求）
@@ -198,6 +211,10 @@ $$a_0+a_1+a_2=\sqrt{233}$$
     \label{eq:eqtest}
     a_0 + a_1 + a_2 = \sqrt{233}
 \end{equation}
+
+\section{术语}
+
+在使用术语和缩略的时候可以使用\lstinline`\gls`命令：例如：术语\gls{massEnergyFunc}及缩略\gls{npu}。
 
 \section{特殊符号}
 
